2020-02-25  Eric Blake  <eblake@redhat.com>

	maint: Fix syntax-check
	* .x-sc_prohibit_strncpy: Exempt pk-repl.c.
	* etc/poke.g4 (expression): Whitespace cleanups.
	* doc/poke.texi (String Concatenation): Likewise.
	* src/ios-dev-file.c (ios_dev_file_close): Likewise.
	* src/ios-dev-mem.c (ios_dev_mem_getc): Likewise.
	* src/ios.c: Likewise.
	* src/pk-hserver.c: Likewise.
	* src/pk-ios.c: Likewise.
	* src/pk-set.c: Likewise.
	* src/pkl-ast.c: Likewise.
	* src/pkl-ast.h: Likewise.
	* src/pkl-fold.c: Likewise.
	* src/pkl-insn.def: Likewise.
	* src/pkl-tab.y: Likewise.
	* src/pkl-typify.c: Likewise.
	* src/pvm.jitter: Likewise.
	* testsuite/poke.pkl/structs-diag-1.pk: Likewise.

2020-02-25  Eric Blake  <eblake@redhat.com>

	maint: Saner diff output
	* .gitattributes: New file.
	* etc/git.orderfile: New file.
	* bootstrap.conf (bootstrap_post_import_hook): Set it up.

2020-02-25  Eric Blake  <eblake@redhat.com>

	* .gitignore: Allow './configure -C'.

2020-02-25  Eric Blake  <eblake@redhat.com>

	* doc/poke.texi (Assignments): Typo fix.

2020-02-25  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-ios.c (mem_cmd): Do not accept IOS tags in the .mem
	command.
	* doc/poke.texi (mem command): Update accordingly.
	(file command): Likewise, for .file.
	(info command): Use .ios instead of .file in example.

2020-02-25  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Write After Approval): Add Eric Blake.

2020-02-24  Eric Blake  <eblake@redhat.com>

	* src/pkl-tab.y (array): Allow trailing comma in arrays.
	* doc/poke.texi (Array Literals): Document it.
	* testsuite/poke.pkl/arrays-9.pk: New file, to test it.

2020-02-24  Eric Blake  <eblake@redhat.com>

	* .gitignore: Ignore files created during 'make check'.

2020-02-24  Eric Blake  <eblake@redhat.com>

	maint: add run script for easier uninstalled usage
	* run.in: New file.
	* configure.ac (AC_CONFIG_FILES): Use it to build 'run'.
	* Makefile.am (noinst_SCRIPTS): Include template in tarball.