@@ -1,0 +1,4 @@
+/* { dg-do run } */
+
+/* { dg-command { struct { 1, 2, } } } */
+/* { dg-output "struct {1,2}" } */
